# EAV_System

./: .gitignore  CMakeLists.txt  main.cpp
car-package/: Car.h
car-package/Car/: Car.cpp  Car.h
car-package/hardware-interfaces/: GPS.cpp  GPS.h  WiFi.cpp
car-package/hardware-interfaces/GPS/: GPS.cpp  GPS.h
car-package/hardware-interfaces/WiFi/: WiFi.h
car-package/modules/: Authentication.cpp  Billing.cpp  Billing.h  Networking.cpp  Networking.h
car-package/modules/Authentication/: Authentication.h
car-package/modules/V2CSCommunication/: V2CSCommunication.cpp  V2CSCommunication.h
car-package/services/: Aggregator.h
car-package/services/Aggregator/: Aggregator.cpp
car-package/services/Charging/: Charging.cpp  Charging.h
car-package/services/StationDiscovery/: StationDiscovery.cpp  StationDiscovery.h
charging-point-package/ChargingPoint/: ChargingPoint.cpp  ChargingPoint.h
charging-point-package/hardware-interfaces/MainController/: MainController.cpp  MainController.h
charging-point-package/modules/Authentication/: Authentication.cpp  Authentication.h
charging-point-package/modules/Database/: Database.cpp  Database.h
charging-point-package/modules/Networking/: Network.cpp  Network.h
charging-station-package/ChargingStation/: ChargingStation.cpp  ChargingStation.h
charging-station-package/modules/CS2VCommunication/: CS2VCommunication.cpp  CS2VCommunication.h
common/interfaces/: Coordinates.cpp  Coordinates.h
common/modules/: XMLParser.cpp  XMLParser.h
common/modules/EWallet/: EWallet.cpp  (+1 more)
global-interfaces/: Coordinates.cpp
world-package/World/: World.cpp  World.h
(+8 files in other folders)
